gcc/testsuite/rust/rustc/ui/issues/issue-56199.rs
enum Foo {}
struct Bar {}

impl Foo {
    fn foo() {
        let _ = Self;
// { dg-error "" "" { target *-*-* } .-1 }
        let _ = Self();
// { dg-error "" "" { target *-*-* } .-1 }
    }
}

impl Bar {
    fn bar() {
        let _ = Self;
// { dg-error "" "" { target *-*-* } .-1 }
        let _ = Self();
// { dg-error "" "" { target *-*-* } .-1 }
    }
}

fn main() {}

